# moss

./: .gitignore  README.md  pltest.py  pyproject.toml
.github/workflows/: python-app.yml
examples/: 240706_GDES001.py  _240802_am243_weekend.py  avi.py  bessy_20240727.py  broken_notebook.py  ebit_july2024_from_off.py  ebit_july2024_mass_off.py  example_follow_marimo.py  ljh_miniebit_raven_v1.py  ljh_mnkalpha.py  marimo_pulse_analysis_myriad.py  off_ebit.py  off_ebit_july2024.py  parquet_after_ljh_mnkalpha.py  pax_20250428.py  test_examples.py
massp/: Untitled.ipynb  __init__.py  cal_steps.py  channel.py  channels.py  drift_correction.py  example.ipynb  example_marimo.py  example_marimo2.py  example_marimo_old.py  filters.py  ljhfiles.py  ljhutil.py  misc.py  noise_algorithms.py  noise_channel.py  test_stuff.py  time_algorithms.py
moss/: __init__.py  __main__.py  blah.py  cal_steps.py  channel.py  channels.py  drift_correction.py  example_follow_marimo.py  example_marimo.py  example_marimo_dbg.py  example_marimo_ebit_off.py  example_marimo_old.py  filters.py  jsonFilter.py  links_test.py  ljhfiles.py  ljhutil.py  mass_add_lines.py  mass_add_lines_truebq.py  misc.py  monkeytype.sqlite3  multifit.py  mypy.ini  noise_algorithms.py  noise_channel.py  noise_plot_example.py  phase_correct.py  pulse_algorithms.py  pyproject.toml  rough_cal.py  testMonkey.py  testPyAnnotate.py  test_multifit.py  test_notebooks.py  test_rough_cal.py  test_stuff.py  time_algorithms.py  trivial_notebook.py  truebq_bin.py  typeInfo_filtered.json  (+2 more)
