[project]
name = "moss"
description = "moss example package"
version = "0.1.0"
authors = [
    { name = "S", email = "s@moss.com" }
]
dependencies = [
    "polars",
    "scipy",
    "numpy","ipympl","matplotlib","itables"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]