[project]
name = "moss"
description = "moss example package"
version = "0.1.0"
authors = [
    { name = "S", email = "s@moss.com" }
]
dependencies = [
    "polars",
    "scipy",
    "numpy","ipympl","matplotlib","itables",
    "marimo", 
    # for matplotlib plots in marimo
    "tornado",
    "numba",
    "pulsedata @ git+https://github.com/ggggggggg/pulsedata#egg=pulsedata",
    "mass @ git+https://github.com/usnistgov/mass#egg=mass",
    "pytest",
    "dill"
]

[project.scripts]
moss_examples = "moss.misc:launch_examples"

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

# pyproject.toml
[tool.pytest.ini_options]
# error on warnings
addopts = "-W error" 
testpaths = [
    "moss",
    "examples"
]
filterwarnings = [
    "ignore::UserWarning: Using UFloat objects with std_dev==0 may give unexpected results."
    ]